Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/analyzer/LambdaWithMethod.out
LambdaWithMethod.java:9:28: compiler.warn.potential.lambda.found
- compiler.err.warnings.and.werror
1 error
1 warning
